# NAI

./: .gitignore  README.md
Lab01/src/: main.cpp
Lab02/: wyklad.cpp
Lab02/src/: main.cpp
Lab03/: CMakeLists.txt
Lab03/src/: main.cpp
Lab04/src/: main.cpp
Lab05/src/: main.cpp
Lab07/: CMakeLists.txt  main.cpp
Lab08/: clion-opencv.bat  main.cpp  opencv-clion.bat
